<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            tools:src="@drawable/hotel"/>

        <TextView
            android:id="@+id/hotelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotelNameAndLocation"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="@string/priceAndStatus"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/periodTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/periodTag"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/periodEdit"
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:background="@color/light_purple"
                    android:padding="8dp"
                    android:text="@string/templatePeriod" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/personsTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/personsTag"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/personsEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/light_purple"
                    android:padding="8dp"
                    android:inputType="number"
                    android:text="@string/templatePersons" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/mealPlanTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/mealPlanTag"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/mealSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@color/light_purple" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp">

                <TextView
                    android:id="@+id/notesTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/notesTag"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/notesEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/light_purple"
                    android:inputType="textMultiLine"
                    android:padding="8dp"
                    android:text="@string/templateNote" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp">


                <Button
                    android:id="@+id/editButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/dark_purple"
                    android:text="@string/editButton"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@color/dark_purple"
                    android:text="@string/cancelButton"
                    android:textSize="20sp" />
            </TableRow>

        </TableLayout>


    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/dark_purple"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>